[package]
name = "apu_tt"
version = "0.1.0"
authors = ["Ivan Tham <pickfire@riseup.net>"]
description = "APU Timetable CLI"
readme = "README.md"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.9"
chrono = "0.4"
dirs = "1.0"
tabwriter = { version = "1.0", features = ["ansi_formatting"] }
termion = "1.5"
