[package]
name = "apu_tt"
version = "0.1.0"
authors = ["Ivan Tham <pickfire@riseup.net>"]
edition = '2018'
description = "APU Timetable CLI"
readme = "README.md"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
chrono = "0.4"
dirs = "2.0"
tabwriter = { version = "1.1", features = ["ansi_formatting"] }
termion = "1.5"
